# techprog

./: CMakeLists.txt  MyExceptions.py  README.txt  Readme.txt  battle.py  battle_strategies.py  buildings.py  canvas.py  constants.py  creating_armies.py  description.txt  main.py  programm  scrolledtext.py  spells.py  test_building_builder.py  test_buildings.py  test_runner.py  test_unit_builder.py  test_units.py  turns.py  units.py
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp
